--- a/app/src/main/res/layout/relativelayout.xml
+++ b/app/src/main/res/layout/relativelayout.xml
@@ -29,7 +29,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/relativenext"
         android:layout_width="174dp"
         android:layout_height="86dp"
         android:layout_alignParentEnd="true"
