--- a/app/src/main/res/layout/constraintlayout.xml
+++ b/app/src/main/res/layout/constraintlayout.xml
@@ -35,7 +35,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="CONSTRAINT LAYOUT"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
         app:layout_constraintVertical_bias="0.948" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/constraintnext"
         android:layout_width="178dp"
         android:layout_height="81dp"
         android:layout_marginBottom="8dp"
