--- a/app/src/main/res/layout/linearlayout.xml
+++ b/app/src/main/res/layout/linearlayout.xml
@@ -73,7 +73,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button10"
+            android:id="@+id/linearnext"
             android:layout_width="wrap_content"
             android:layout_height="88dp"
             android:layout_marginLeft="12dp"
