--- a/app/src/main/res/layout/relativelayout.xml
+++ b/app/src/main/res/layout/relativelayout.xml
@@ -6,26 +6,53 @@
     android:background="@android:color/darker_gray">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="312dp"
-        android:layout_height="230dp"
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="255dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@mipmap/moji" />
+        app:srcCompat="@drawable/bambike" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="162dp"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
         android:layout_height="86dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="@android:color/darker_gray"
+        android:fontFamily="monospace"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Bambike Ecotours Intramuros"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginBottom="138dp"
         android:fontFamily="monospace"
-        android:text="BACK"
+        android:paddingLeft="10sp"
+        android:text="Location: Real Street Corner General Luna Street Plaza San Luis Complex, Intramuros, Manila, Luzon 1002 Philippines"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="49dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="-138dp"
+        android:fontFamily="monospace"
+        android:paddingLeft="10sp"
+        android:text="Distance from UST: 3.7 KM"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="17sp"
         android:textStyle="bold" />
 
     <Button
@@ -34,51 +61,23 @@
         android:layout_height="86dp"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/button3"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dp"
         android:fontFamily="monospace"
         android:text="NEXT"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="162dp"
         android:layout_height="86dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView3"
-        android:background="@android:color/darker_gray"
+        android:layout_marginBottom="17dp"
         android:fontFamily="monospace"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="RELATIVE LAYOUT"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="68dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:fontFamily="monospace"
-        android:paddingLeft="10sp"
-        android:text="Location:"
+        android:text="BACK"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView6"
-        android:fontFamily="monospace"
-        android:paddingLeft="10sp"
-        android:text="Distance from UST:"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp"
-        android:textStyle="bold" />
 </RelativeLayout>
